# BorgDrone

./: .gitattributes  .gitignore  .npmrc  Makefile  README.md  package.json  pnpm-lock.yaml  pyproject.toml  test.py  test.sh
borgdrone/: _version.py  app.py  extensions.py  types.py
borgdrone/archives/: ArchivesManager.py  __init__.py  managers.py  models.py  views.py
borgdrone/archives/templates/archives/: archives.html  archives_list.html  index.html
borgdrone/auth/: UserManager.py  __init__.py  managers.py  models.py  views.py
borgdrone/borg/: BorgRunner.py  __init__.py  constants.py  logger.py  models.py  runner.py
borgdrone/bundles/: BackupDirectoryManager.py  BundleDirectoryManager.py  BundleManager.py  __init__.py  managers.py  models.py  views.py
borgdrone/bundles/templates/bundles/: bundle_form.html  bundles.html  index.html  runner.html
borgdrone/dashboard/: __init__.py
borgdrone/database/: __init__.py
borgdrone/helpers/: __init__.py  bash.py  database.py  datahelpers.py  filemanager.py  flaskhelpers.py
borgdrone/logging/: __init__.py  config.py  event.py  logger.py
borgdrone/repositories/: RepositoryManager.py  __init__.py  managers.py  models.py  views.py
borgdrone/repositories/templates/repositories/: create.html  header.html  import.html  index.html  repo_stats.html  repos.html
borgdrone/settings/: __init__.py  environ.py  models.py
borgdrone/settings/templates/settings/: settings_index.html
borgdrone/static/css/: bootstrap.css  bootstrap.css.map  main.css
borgdrone/static/js/: post.js  pre.js
borgdrone/static/scss/: bootstrap.scss
borgdrone/templates/: base.html  macros.html  sidebar.html
src/borgdrone/: app.py
src/borgdrone/archives/: models.py  views.py
src/borgdrone/auth/: __init__.py  managers.py
src/borgdrone/borg/: __init__.py  borgweb_logs.py  runner.py
src/borgdrone/bundles/: managers.py  views.py
src/borgdrone/bundles/templates/bundles/: bundle_form.html  index.html  sockettest.html
src/borgdrone/dashboard/: views.py
src/borgdrone/dashboard/templates/dashboard/: index.html
src/borgdrone/database/: models.py
src/borgdrone/helpers/: bash.py  flaskhelpers.py
src/borgdrone/logging/: event.py
src/borgdrone/repositories/: __init__.py  managers.py  views.py
src/borgdrone/repositories/templates/repositories/: create.html  import.html  repo_stats.html
src/borgdrone/settings/: views.py
src/borgdrone/templates/: macros.html  messages.html
src/borgdrone/templates/auth/: login.html
tests/: conftest.py  test_archives.py  test_bundles.py  test_repositories.py
tests/requests/: test_archives.py  test_bundles.py  test_repositories.py
